--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SimpleLightbox library</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.min.css"
+      integrity="sha512-q+OxwGn5fQc6oIdj3NQgTVMgS9TCLksZp5DsdSEsZbGamjdN7yVAMah+R1DmHZykkHD5gI8imeuEfmkp7ZHZ3w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -12,8 +15,11 @@
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
-    <ul class="gallery"></ul>
+  <ul class="gallery"></ul>
 
-    <script src="js/02-lightbox.js" type="module"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.0/simple-lightbox.min.js"
+    integrity="sha512-jgXSLb67gY/0ooehNWMgKmfk6kXJgPmcQ8TTO6FW+HV3Bi5J6iPs/CMR+ag3t2pk6vSuNm4u6fQlI47BiJL/Jw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" type="module"></script>
+  <script src="js/02-lightbox.js" type="module"></script>
   </body>
 </html>
